--- a/S05T02N01ArcosErnesto/src/main/resources/application.properties
+++ b/S05T02N01ArcosErnesto/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/flowers
+spring.datasource.url=jdbc:mysql://localhost:3306/dice_game
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Calavera33
