--- a/S05T02N01ArcosErnesto/src/main/resources/application.properties
+++ b/S05T02N01ArcosErnesto/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/dice_game?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Madrid
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Calavera33
+spring.datasource.password=root
 
 # JPA and Hibernate configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
